--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,49 @@
+*~
+.directory
+
+.Trash-*
+.metadata
+.gradle
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+-.project
+*.launch
+.cproject
+-.classpath
+
 *.class
+
+*.jar
+*.war
+*.ear
+
+hs_err_pid*
+
+.idea/
+*.iml
+*.ipr
+*.iws
+
+build/
+
+# JRebel
+rebel.xml
+rebel-remote.xml
+
+# Someone uses a Mac...
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.AppleDouble
+.LSOverride
+.Trashes
+ehthumbs.db
+Thumbs.db
