--- a/build.gradle
+++ b/build.gradle
@@ -5,5 +5,6 @@ repositories {
 }
 
 dependencies {
-    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.40'
+    //compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.40'
+    compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.16.1'
 }
