--- a/build.gradle
+++ b/build.gradle
@@ -1,26 +1,35 @@
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.4'
+    }
+}
+
+apply plugin: 'maven'
 apply plugin: 'java'
-apply plugin: 'java-library-distribution'
+apply plugin: 'application'
+apply plugin: 'com.github.johnrengelman.shadow'
+
+mainClassName = 'org.iraiders.idscanner2.Main'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    shadow 'junit:junit:3.8.2'
+    //compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.40'
     compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.16.1'
+    shadow 'org.xerial:sqlite-jdbc:jar:3.16.1'
 }
 
-// Task "distZip" added by plugin "java-library-distribution":
-distZip.shouldRunAfter(build)
-
-jar {
-    // Keep jar clean:
-    exclude 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA', 'META-INF/*.MF'
-
+shadowJar {
+    baseName = 'shadow'
+}
+/*jar {
     manifest {
-        attributes 'Main-Class': 'org.iraiders.idscanner2.Main',
-                'Class-Path': configurations.runtime.files.collect { "lib/$it.name" }.join(' ')
+        attributes 'Main-Class': 'org.iraiders.idscanner2.Main'
     }
-    // How-to add class path:
-    //     http://stackoverflow.com/questions/22659463/add-classpath-in-manifest-using-gradle
-    //     https://gist.github.com/simon04/6865179
-}
+}*/
